@@ -20,6 +20,7 @@ acl (2.2.52-4) UNRELEASED; urgency=medium
     - Use $(CURDIR) instead of `pwd`.
     - Remove phase prints and comment out DH_VERBOSE, make is verbose enough.
     - Use dpkg architecture.mk fragment instead of ad-hoc variable assignment.
+    - Use dh_testdir instead of open-coding it.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 10 Feb 2019 22:53:54 +0100
 
